Revert "Tog bort onödiga sidor, fixade logga och felsökde min kod online. Jag contrast checkade den också."
This reverts commit 73d3dad72103ddd20581aade32b53201296f124f.

--- a/css/style.css
+++ b/css/style.css
@@ -39,32 +39,24 @@ body{
     display: grid;
     height: 100vh;
     width: 100%;
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: 1fr;
     grid-template-rows: 1fr 9fr;
     gap: 0px;
     grid-template-areas:
-    'nav nav'
-    'ar as';
+    'nav'
+    'ar';
     background-size: cover;
     background-color: black;
     opacity: 1;
     visibility: visible;
 }
 
-.kontakt{
-    display: grid;
-    height: 100vh;
-    width: 100%;
-    grid-template-columns: 1fr;
-    grid-template-rows: 1fr 9fr;
-    gap: 0px;
-    grid-template-areas:
-    'nav'
-    'text';
-    background-size: cover;
-    background-color: black;
-    opacity: 1;
-    visibility: visible;
+.bild{
+    grid-area: "picture";
+}
+
+.fill{
+    grid-area: "fill";
 }
 
 #ar1 {
@@ -93,7 +85,7 @@ body{
     grid-template-rows: 1fr 2fr;
 }
 
-#void {
+#ar3 {
     grid-area: ar;
 
 }
@@ -126,6 +118,7 @@ a {
 }
 
 aside {
+    display: flexbox;
     justify-content: center;
     text-align: center;
     grid-area: as;
@@ -149,26 +142,8 @@ h3 {
     font-size: 48px;
 }
 
-.kontakt-text{
-    grid-area: text;
-    padding: 150px;
-    font-size: 180px
-}
-
-h4 {
-    color: white;
-    font-size: 60px
-}
-
 .text{
-    font-size: 34px;
     grid-area: text;
-    padding-left: 100px;
-}
-
-.bild{
-    grid-area: text;
-    padding-top: 25px;
 }
 
 .h1-div {
@@ -176,6 +151,8 @@ h4 {
 }
 
 ol {
-    font-size: 48px;
+    font-size: 48px ;
+    display: flexbox;
+    flex-wrap: wrap;
     align-content: stretch;
 }
